Fixed pagination mobile view

--- a/src/app/pages/movies/movies.component.css
+++ b/src/app/pages/movies/movies.component.css
@@ -4,3 +4,7 @@
     }
 }
 */
+
+.card-paginator {
+    padding: 14px;
+}
